# Proyecto2EstructuraDeDatos2

./: CMakeLists.txt  accessquerydesigner.cpp  accessquerydesigner.h  binmirror.cpp  binmirror.h  binserializer.cpp  binserializer.h  binstorage.cpp  binstorage.h  data_sandbox.cpp  datamodel.cpp  datamodel.h  freespacemanager.cpp  freespacemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  querydesigner.cpp  querydesigner.h  querypage.cpp  querypage.h  querystore.cpp  querystore.h  recordspage.cpp  recordspage.h  recordspage.ui  reportdef.cpp  reportdef.h  reportengine.cpp  reportengine.h  reportrenderer.cpp  reportrenderer.h  reportspage.cpp  reportspage.h  reportwizard.cpp  reportwizard.h  resources_shell.qrc  shell_sandbox.cpp  shellwindow.cpp  shellwindow.h  (+3 more)
